log
Thu Mar 26 06:58:14 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
a4786ce
Thu Mar 26 07:16:36 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
7f201c8
Thu Mar 26 07:16:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
159d423
Thu Mar 26 07:22:45 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
0426f46
Thu Mar 26 07:35:20 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:22: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   53 |     if(list->current = NULL || list -> current -> next == NULL){
      |                      ^
list.c:53:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   53 |     if(list->current = NULL || list -> current -> next == NULL){
      |        ^~~~
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
900605f
Mon Mar 30 01:51:50 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:22: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   53 |     if(list->current = NULL || list -> current -> next == NULL){
      |                      ^
list.c:53:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   53 |     if(list->current = NULL || list -> current -> next == NULL){
      |        ^~~~
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
7f6a848
Mon Mar 30 01:52:54 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
6f47bc4
Mon Mar 30 01:53:24 AM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
test.c: In function ‘nextList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:103:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  103 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:91:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   91 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:76:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   76 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
4c5098c
